# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,8 @@ import servicesRouter from "./services";
 import appointmentsRouter from "./appointments";
 import productsRouter from "./products";
 import ordersRouter from "./orders";
+import adminRouter from "./admin";
+import storageRouter from "./storage";
 
 const router: IRouter = Router();
 
@@ -12,5 +14,7 @@ router.use(servicesRouter);
 router.use(appointmentsRouter);
 router.use(productsRouter);
 router.use(ordersRouter);
+router.use(adminRouter);
+router.use(storageRouter);
 
 export default router;
